almost done. just need cineprowl video

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 		<section>
 			<h1>Andrew Petersen</h1>
 			<h4>Software Developer - Milwaukee, WI</h4>
-			<img src='images/icecaves.png' />
+			<img style='height:300px' src='images/icecaves.png' />
 			<p>Hi, thanks for taking the time to check this out.</p>
 		</section>
 
 		<section>
 				<p>This opportunity is VERY enticing.</p>
-				<p>I've never had the opportunity to work for such a worthy cause, and I couldn't have requested a more exciting technology stack.</p>	
+				<p>I've never had a chance to work on such a worthy cause, and I couldn't have requested a more exciting technology stack.</p>	
 		</section>
 
 		<section>
 			<section>
 				<h2>About Me</h2>
-				<p>I am a web developer. I work for <a href='http://skylinetechnologies.com/'>Skyline Technologies</a>, a consulting company, out of their Milwaukee office.</p>
+				<p>I am a web developer. I work as a consultant out of Milwaukee for <a target='_blank' href='http://skylinetechnologies.com/'>Skyline Technologies</a>.</p>
 			</section>
 			<section>
 				<h3>Microsoft Shop</h3>
@@ -40,20 +40,89 @@
 		<section>
 			<h3>My Portfolio</h3>
 			<p>Because I primarily deal with internal enterprise applications, I struggled to come up with a portfolio/representation of my work.</p>
-			
+			<p>My solution was to do a few screen casts of some applications</p>
 		</section>
 
 		<!-- SLIDE 3: CineProwl Video -->
-		<section>Slide CineProwl Video</section>
+		<section>
+			<section>
+				<h2>CineProwl</h2>
+				<p>This first one is a fun one, but it is by far the most applicable.</p>
 
-		<!-- SLIDE 4: CRM Web Parts Video -->
-		<section>Slide Crm Web Parts</section>
+			</section>
+			<section>
+				<h3>Technologies Used</h3>
+				<ol>
+					<li>Node.js</li>
+					<li>MongoDb</li>
+					<li>Express.js</li>
+					<li>jQuery Mobile</li>
+					<li>Angular.js</li>
+					<li>Google OpenId</li>
+				</ol>
+			</section>
+		</section>
 
-		<!-- SLIDE 5: MyNycb Video -->
-		<section>Slide MyNycb Video</section>
+		<!-- CRM Web Parts Video -->
+		<section>
+			<section>
+				<h2>CRM Client Map</h2>
+				<video width="1280" height="720" controls>
+					<source src="video/crmWebParts.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
+				<span>Sorry about the quality. Its semi-readable in fullscreen</span>
+			</section>
+			<section>
+				<h3>Technologies Used</h3>
+				<ol>
+					<li>I started by writing a RESTful OData web service (in .NET) to expose all of the CRM data.</li>
+					<li>Bing Maps API.  I wrote a javascript helper library to make it a bit more friendly.  I've used that library on quite a few projects now.</li>
+					<li>jQuery DataTables.net</li>
+				</ol>
+			</section>
+		</section>
+		
 
-		<!-- SLIDE 6: Source Code -->
-		<section>GitHub Source Code</section>
+		<!-- CRM Web Parts Video -->
+		<section>
+			<section>
+				<h2>NY Community Bank Branch Locator</h2>
+				<video width="1280" height="720" controls>
+					<source src="video/NycbBranchLocator.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
+			</section>
+			<section>
+				<h3>Technologies Used</h3>
+				<ol>
+					<li><a target='_blank' href='https://developers.google.com/places/documentation/'>Google Places API</a></li>
+					<li>HTML5 Geolocation</li>
+					<li><a target='_blank' href='https://developers.google.com/maps/documentation/geocoding/'>Google Geocoding API</a></li>
+				</ol>
+			</section>
+		</section>
+
+		<!-- Source Code -->
+		<section>
+			<h2>Source Code</h2>
+			<p>You're welcome to check my <a target='_blank' href='https://github.com/DroopyTersen'>GitHub account</a> for code quality. Please keep in mind anything out there was only ever intended for myself so documentation is a little sparse...</p>
+			<ul>
+				<li><a target='_blank' href='https://github.com/DroopyTersen/mwater-presentation'>This slideshow</a></li>
+				<li><a target='_blank' href='https://github.com/DroopyTersen/cineprowl-mobile'>CineProwl Mobile</a></li>
+				<li><a target='_blank' href='https://github.com/DroopyTersen/droopy-vlc'>VLC Service (controls video player over Http)</a></li>
+				<li><a target='_blank' href='https://github.com/DroopyTersen/droopy-mongo'>Mongo Helper</a></li>
+			</ul>
+		</section>
+
+		<section>
+			<h4>Thank you!</h4>
+			<p>This picture was taken last month and it was too cheesily appropriate not to include.</p>
+			<img src='images/drinking.jpg' />
+
+			<a href='mail:andrew.petersen15@gmail.com'>andrew.petersen15@gmail.com</a>
+			<span>262.930.1118</span>
+		</section>
 	</div></div>
 
 	<script type="text/javascript" src="bower_components/reveal/js/reveal.js"></script>
