adding web.config to try and get azure to play mp4

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 		<section>
 			<h4>Thank you!</h4>
 			<p>This picture was taken last month and it was too cheesily appropriate not to include.</p>
-			<img src='images/drinking.jpg' />
+			<img style='width:600px' src='images/drinking.jpg' />
 
-			<a href='mail:andrew.petersen15@gmail.com'>andrew.petersen15@gmail.com</a>
-			<span>262.930.1118</span>
+			<a href='mailto:andrew.petersen15@gmail.com'>andrew.petersen15@gmail.com</a>
+			<span> - 262.930.1118</span>
 		</section>
 	</div></div>
 
