playing around with gulp live-reload

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>mWater Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="bower_components/reveal/css/reveal.css">
-	<link rel="stylesheet" type="text/css" href="bower_components/reveal/css/theme/solarized.css">
+	<link rel="stylesheet" type="text/css" href="bower_components/reveal/css/theme/beige.css">
 </head>
 <body>
 	<div class='reveal'><div class='slides'>
@@ -27,12 +27,12 @@
 			</section>
 			<section>
 				<h3>Microsoft Shop</h3>
-				<p>Skyline is a Microsoft Gold Partner, so at work I am primarily in the Microsoft stack.  Primarily Asp.Net MVC and SharePoint.</p>
+				<p>Skyline is a Microsoft Gold Partner, so at work I am usually inside the Microsoft stack.  Primarily Asp.Net MVC and SharePoint.</p>
 				<p>That being said, web is web.  I love that client-side skills are technology agnostic.</p>
 			</section>
 			<section>
 				<h3>Coding For Fun</h3>
-				<p>I spend a large amount of my free time coding for fun.  About 6 months ago I jumped on the nodejs bandwagon and haven't looked back</p>
+				<p>Software development is also my favorite hobby.  About 6 months ago I jumped on the nodejs bandwagon and haven't looked back</p>
 				<p>Everything I do now is with Node and Mongo.</p>
 			</section>
 		</section>
@@ -40,7 +40,7 @@
 		<section>
 			<h3>My Portfolio</h3>
 			<p>Because I primarily deal with internal enterprise applications, I struggled to come up with a portfolio/representation of my work.</p>
-			<p>My solution was to do a few screen casts of some applications</p>
+			<p>My solution was to record a few demos of applications I think would apply to the mWater app.</p>
 		</section>
 
 		<!-- SLIDE 3: CineProwl Video -->
@@ -71,7 +71,7 @@
 					<source src="video/crmWebParts.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
-				<span>Sorry about the quality. Its semi-readable in fullscreen</span>
+				<span>Sorry about the quality. It's semi-readable in fullscreen</span>
 			</section>
 			<section>
 				<h3>Technologies Used</h3>
